# Jailbreak-Foundry

./: .cursorignore  .gitignore  README.md  pyproject.toml  requirements.txt
agents/: README.md  run_implementation_gap_workflow.py  run_paper_to_attack.py  run_paper_to_defense.py
agents/utils/: README.md  agent_utils.py  checkpoint.py  paper_preprocessor.py
agents/workflows/: attack.py  defense.py
assets/: advbench_harmful_behaviors.csv  benchmark-advbench-50.csv  hybrid-verification-32.csv  jbb-harmful-behaviors-32.csv
attack_update_report/: ASR_REPORT_2026-02-16_to_2026-03-06.md
attacks_paper_info/2310.08419/: 2310.08419_plan.md  Implementation_summary.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2311.03191/: 2311.03191_plan.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2311.08268/: 2311.08268_plan.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2312.02119/: 2312.02119_implementation_plan.md  IMPLEMENTATION_SUMMARY.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2401.06373/: 2401.06373_implementation_plan.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2405.14023/: 2405.14023_implementation_plan.md  Implementation_verdict.md  coverage_analysis.md  iteration_3_summary.md  iteration_4_summary.md
attacks_paper_info/2407.01902/: 2407.01902_implementation_plan.md  Implementation_verdict.md  coverage_analysis.md  iteration_3_summary.md  iteration_4_summary.md  iteration_5_summary.md
attacks_paper_info/2407.11969/: 2407.11969_implementation_plan.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2407.16205/: 2407.16205_plan.md  Implementation_summary.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2410.02832/: 2410.02832_implementation_plan.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ITER2.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2410.03857/: 2410.03857_implementation_plan.md  IMPLEMENTATION_SUMMARY.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2410.05295/: 2410.05295_plan.md  Implementation_verdict.md  coverage_analysis.md  iteration_3_summary.md
attacks_paper_info/2412.03556/: 2412.03556_implementation_plan.md  Implementation_verdict.md  coverage_analysis.md  implementation_summary.md  iteration_2_summary.md
attacks_paper_info/2412.10321/: 2412.10321_plan.md  Implementation_verdict.md  coverage_analysis.md
attacks_paper_info/2412.15289/: 2412.15289_plan.md  Implementation_verdict.md  REFINEMENT_ITERATION_2_SUMMARY.md  coverage_analysis.md
docs/: ARCHITECTURE.md  ATTACK_CONFIG.md  CLI_REFERENCE.md  EVALUATION.md  PROVIDERS.md
src/jbfoundry/: __init__.py  (+1 more)
tests/: __init__.py  test_attack_workflow_checkpoint.py  test_attacks_with_top_models.py  test_cli_flags.py  test_compose_attack.py  test_cost_tracker_threads.py  test_dataset.py  test_gsm8k_evaluator.py  test_model_integration.py  test_wmdp_evaluator.py
(+250 files in other folders)
